--- a/Views/StockUp.xaml
+++ b/Views/StockUp.xaml
@@ -58,7 +58,9 @@
                         </Grid.ColumnDefinitions>
                         <Image Grid.Row="0"
                                    Source="{Binding ImageUrl, TargetNullValue='https://upload.wikimedia.org/wikipedia/commons/2/20/Point_d_interrogation.jpg'}" 
-                                   Aspect="AspectFill" />
+                                   Aspect="AspectFill"
+                               WidthRequest="100"
+                                           HeightRequest="120"/>
 
                         <Label Grid.Row="1"
                                    Text="{Binding Name}" 
