--- a/Views/Accounting.xaml
+++ b/Views/Accounting.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="IMP_reseni.Views.Accounting"
-             Title="Accounting"
+             Title="Učetnictví"
              BackgroundColor="{StaticResource Primary}">
     <ContentPage.Resources>
         <Style TargetType="Button">
