--- a/Views/AddItemToBasket.xaml
+++ b/Views/AddItemToBasket.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="IMP_reseni.Views.AddItemToBasket"
-             Title="AddItemToBasket">
+             Title="Přidaní položky do košíku">
     <ContentPage.Resources>
         <Style TargetType="Button">
             <Setter Property="FontSize" Value="32" />
