--- a/Views/ModifyItem.xaml
+++ b/Views/ModifyItem.xaml
@@ -4,7 +4,7 @@
              x:Class="IMP_reseni.Views.ModifyItem"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:Converters="clr-namespace:IMP_reseni.Converters"
-             Title="ModifyItem">
+             Title="Změnit položku">
     <ContentPage.Resources>
         <Converters:IntToBoolConverter x:Key="intToBool" />
         <toolkit:VariableMultiValueConverter 
