--- a/Views/ModifySupplier.xaml
+++ b/Views/ModifySupplier.xaml
@@ -4,7 +4,7 @@
              x:Class="IMP_reseni.Views.ModifySupplier"
               xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:Converters="clr-namespace:IMP_reseni.Converters"
-             Title="ModifySupplier">
+             Title="Změnit dodavatele">
     <ContentPage.Resources>
         <Converters:IntToBoolConverter x:Key="intToBool" />
         <toolkit:VariableMultiValueConverter 
