--- a/Views/NewSubCategory.xaml
+++ b/Views/NewSubCategory.xaml
@@ -4,7 +4,7 @@
              x:Class="IMP_reseni.Views.NewSubCategory"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:Converters="clr-namespace:IMP_reseni.Converters"
-             Title="NewSubCategory">
+             Title="Nová podkategorie">
     <ContentPage.Resources>
         <Converters:IntToBoolConverter x:Key="intToBool" />
         <toolkit:VariableMultiValueConverter 
@@ -51,7 +51,7 @@
 
         <Button Text="{Binding PictureButtonText}"       
                 HorizontalOptions="Center"
-                Margin="0,0,0,60"
+                Margin="0,0,0,30"
                 Command="{Binding UploadOPictureCommand}">
             <Button.CommandParameter>
                 <MultiBinding Converter="{StaticResource VariableMultiValueConverter}">
