--- a/Views/NewSupplier.xaml
+++ b/Views/NewSupplier.xaml
@@ -4,7 +4,7 @@
              x:Class="IMP_reseni.Views.NewSupplier"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:Converters="clr-namespace:IMP_reseni.Converters"
-             Title="NewSupplier">
+             Title="Nový dodavatel">
     <ContentPage.Resources>
         <Converters:IntToBoolConverter x:Key="intToBool" />
         <Style TargetType="Button">
