--- a/Views/Basket.xaml
+++ b/Views/Basket.xaml
@@ -25,7 +25,7 @@
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
-                        <Image Source="{Binding ImageUrl, FallbackValue='https://upload.wikimedia.org/wikipedia/commons/2/20/Point_d_interrogation.jpg'}"
+                        <Image Source="{Binding ImageUrl, TargetNullValue='question_mark.jpg'}"
                                Grid.Column="0"
                                Aspect="AspectFill"
                                HeightRequest="60"
