--- a/Views/ModifyItem.xaml
+++ b/Views/ModifyItem.xaml
@@ -138,20 +138,20 @@
                LineBreakMode="WordWrap"/>
         </HorizontalStackLayout>
         <Button Text="Zobrazit obrázek"       
+                FontSize="27"
                 HorizontalOptions="Center"
                 Command="{Binding ShowPictureCommand}"
                 CommandParameter="{Binding SelectedItem}"/>
-        <Button Text="Změnit obrázek"       
+        <Button Text="Změnit obrázek"     
+                FontSize="29"
                 HorizontalOptions="Center"
                 Command="{Binding ChangePictureCommand}"
                 CommandParameter="{Binding SelectedItem}"/>
         <Button Text="Potvrdit"
                 HorizontalOptions="Center"
                 Margin="0,20,0,0"
-                Command="{Binding ModifyCommand}"
-                CommandParameter="{Binding Source={x:Reference Entry},
-                                            Path=Text}">
-            <Button.IsEnabled>
+                Command="{Binding ModifyCommand}">
+            <Button.CommandParameter>
                 <MultiBinding Converter="{StaticResource VariableMultiValueConverter}">
                     <Binding Converter="{StaticResource intToBool}" Source="{x:Reference SupplierPicker}" Path="SelectedItem.Length" />
                     <!--<Binding Converter="{StaticResource intToBool}" Source="{x:Reference EntryCount}" Path="Text.Length" />-->
@@ -162,7 +162,7 @@
                     <Binding Converter="{StaticResource intToBool}" Source="{x:Reference SubCategoryPicker}" Path="SelectedItem.Length" />
                     <Binding Converter="{StaticResource intToBool}" Source="{x:Reference CategoryPicker}" Path="SelectedItem.Length" />
                 </MultiBinding>
-            </Button.IsEnabled>
+            </Button.CommandParameter>
         </Button>
     </StackLayout>
 </ContentPage>
