--- a/Views/AdminPanel.xaml
+++ b/Views/AdminPanel.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="IMP_reseni.Views.AdminPanel"
              xmlns:Views="clr-namespace:IMP_reseni.Views"
-             Title="AdminPanel"
+             Title="Administrace"
              BackgroundColor="{StaticResource Primary}">
     <ContentPage.Resources>
         <Style TargetType="Button">
